fixed videoNotes view, header box, note overflow..

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,7 +42,6 @@
 	justify-items: center;
 	margin-top: 10%;
 	position: fixed;
-	z-index: 1000;
 }
 
 .header {
@@ -57,7 +56,6 @@
 	background-color: aliceblue;
 	padding-left: 10px;
 	padding-right: 10px;
-	border-radius: 1em;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -81,6 +79,13 @@
 	color: black;
 	grid-template-rows: 10% 70% 20%;
 	outline: 2px black solid;
+	position: absolute;
+	top: 16%;
+	left: 70%;
+	min-width: 20%;
+	min-height: 20%;
+	width: 25%;
+	height: 67%;
 }
 
 .timer {
@@ -117,8 +122,10 @@
 
 #YoutubeVideo {
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+	top: 15%;
+	left: 5%;
+	min-width: 20%;
+	min-height: 6%;
+	width: 60%;
+	height: 65%;
 }
